Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-1453

GROUP BY on STRING column produces inconsistent results

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Impala 2.0
    • Impala 2.1
    • None

    Description

      The following query produces inconsistent results on a STRING column:

      SELECT string_col FROM table GROUP BY string_col;

      can be reproduced on http://mdonsky-1.ent.cloudera.com:8888/impala/#query
      with the following query:

      SELECT fname FROM employees GROUP BY fname;

      Attachments

        Activity

          People

            henryr Henry Robinson
            henryr Henry Robinson
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: