be/src/service/impala-hs2-server.cc
@@ -89,36 +89,27 @@ static int64_t ByteSize(const thrift::TRow& row) {
 
 // Returns the size, in bytes, of a Hive TColumn structure, only taking into account those
 // values in the range [start_idx, end_idx).
-static int64_t TColumnByteSize(const thrift::TColumn& col, int start_idx, int end_idx) {
-  int64_t bytes = sizeof(col);
-  int64_t num_rows = end_idx - start_idx;
-  if (col.__isset.boolVal) {
-    // Last num_rows term here and below is for one bit per row for nullity.
-    return bytes + (num_rows * sizeof(bool)) + (num_rows / 8) + 1;
-  }
-  if (col.__isset.byteVal) {
-    return bytes + num_rows + col.byteVal.nulls.size();
-  }
-  if (col.__isset.i16Val) {
-    return bytes + (num_rows * sizeof(int16_t)) + (num_rows / 8) + 1;
-  }
-  if (col.__isset.i32Val) {
-    return bytes + (num_rows * sizeof(int32_t)) + (num_rows / 8) + 1;
-  }
-  if (col.__isset.i64Val) {
-    return bytes + (num_rows * sizeof(int64_t)) + (num_rows / 8) + 1;
-  }
+static uint32_t TColumnByteSize(const thrift::TColumn& col, uint32_t start_idx,
+    uint32_t end_idx) {
+  DCHECK_LE(start_idx, end_idx);
+  uint32_t num_rows = end_idx - start_idx;
+  if (num_rows == 0) return 0L;
+
+  if (col.__isset.boolVal) return (num_rows * sizeof(bool)) + col.boolVal.nulls.size();
+  if (col.__isset.byteVal) return num_rows + col.byteVal.nulls.size();
+  if (col.__isset.i16Val) return (num_rows * sizeof(int16_t)) + col.i16Val.nulls.size();
+  if (col.__isset.i32Val) return (num_rows * sizeof(int32_t)) + col.i32Val.nulls.size();
+  if (col.__isset.i64Val) return (num_rows * sizeof(int64_t)) + col.i64Val.nulls.size();
   if (col.__isset.doubleVal) {
-    return bytes + (num_rows * sizeof(double)) + (num_rows / 8) + 1;
+    return (num_rows * sizeof(double)) + col.doubleVal.nulls.size();
   }
   if (col.__isset.stringVal) {
-    for (int i = start_idx; i < end_idx; ++i) {
-      bytes += col.stringVal.values[i].size();
-    }
-    return bytes + (num_rows / 8);
+    uint32_t bytes = 0;
+    for (int i = start_idx; i < end_idx; ++i) bytes += col.stringVal.values[i].size();
+    return bytes + col.stringVal.nulls.size();
   }
 
-  return bytes;
+  return 0;
 }
 
 // Helper function to translate between Beeswax and HiveServer2 type
@@ -178,77 +169,64 @@ class ImpalaServer::HS2ColumnarResultSet : public ImpalaServer::QueryResultSet {
       switch (metadata_.columns[j].columnType.types[0].scalar_type.type) {
         case TPrimitiveType::NULL_TYPE:
         case TPrimitiveType::BOOLEAN:
+          StitchNulls(num_rows_, rows_added, start_idx, from->boolVal.nulls,
+              &(to->boolVal.nulls));
           to->boolVal.values.insert(
               to->boolVal.values.end(),
               from->boolVal.values.begin() + start_idx,
               from->boolVal.values.begin() + start_idx + rows_added);
-          to->boolVal.nulls.insert(
-              to->boolVal.nulls.end(),
-              from->boolVal.nulls.begin() + start_idx,
-              from->boolVal.nulls.begin() + start_idx + rows_added);
           break;
         case TPrimitiveType::TINYINT:
+          StitchNulls(num_rows_, rows_added, start_idx, from->byteVal.nulls,
+              &(to->byteVal.nulls));
           to->byteVal.values.insert(
               to->byteVal.values.end(),
               from->byteVal.values.begin() + start_idx,
               from->byteVal.values.begin() + start_idx + rows_added);
-          to->byteVal.nulls.insert(
-              to->byteVal.nulls.end(),
-              from->byteVal.nulls.begin() + start_idx,
-              from->byteVal.nulls.begin() + start_idx + rows_added);
           break;
         case TPrimitiveType::SMALLINT:
+          StitchNulls(num_rows_, rows_added, start_idx, from->i16Val.nulls,
+              &(to->i16Val.nulls));
           to->i16Val.values.insert(
               to->i16Val.values.end(),
               from->i16Val.values.begin() + start_idx,
               from->i16Val.values.begin() + start_idx + rows_added);
-          to->i16Val.nulls.insert(
-              to->i16Val.nulls.end(),
-              from->i16Val.nulls.begin() + start_idx,
-              from->i16Val.nulls.begin() + start_idx + rows_added);
           break;
         case TPrimitiveType::INT:
+          StitchNulls(num_rows_, rows_added, start_idx, from->i32Val.nulls,
+              &(to->i32Val.nulls));
           to->i32Val.values.insert(
               to->i32Val.values.end(),
               from->i32Val.values.begin() + start_idx,
               from->i32Val.values.begin() + start_idx + rows_added);
-          to->i32Val.nulls.insert(
-              to->i32Val.nulls.end(),
-              from->i32Val.nulls.begin() + start_idx,
-              from->i32Val.nulls.begin() + start_idx + rows_added);
           break;
         case TPrimitiveType::BIGINT:
+          StitchNulls(num_rows_, rows_added, start_idx, from->i64Val.nulls,
+              &(to->i64Val.nulls));
           to->i64Val.values.insert(
               to->i64Val.values.end(),
               from->i64Val.values.begin() + start_idx,
               from->i64Val.values.begin() + start_idx + rows_added);
-          to->i64Val.nulls.insert(
-              to->i64Val.nulls.end(),
-              from->i64Val.nulls.begin() + start_idx,
-              from->i64Val.nulls.begin() + start_idx + rows_added);
           break;
         case TPrimitiveType::FLOAT:
         case TPrimitiveType::DOUBLE:
+          StitchNulls(num_rows_, rows_added, start_idx, from->doubleVal.nulls,
+              &(to->doubleVal.nulls));
           to->doubleVal.values.insert(
               to->doubleVal.values.end(),
               from->doubleVal.values.begin() + start_idx,
               from->doubleVal.values.begin() + start_idx + rows_added);
-          to->doubleVal.nulls.insert(
-              to->doubleVal.nulls.end(),
-              from->doubleVal.nulls.begin() + start_idx,
-              from->doubleVal.nulls.begin() + start_idx + rows_added);
           break;
         case TPrimitiveType::TIMESTAMP:
         case TPrimitiveType::DECIMAL:
         case TPrimitiveType::STRING:
         case TPrimitiveType::VARCHAR:
         case TPrimitiveType::CHAR:
+          StitchNulls(num_rows_, rows_added, start_idx, from->stringVal.nulls,
+              &(to->stringVal.nulls));
           to->stringVal.values.insert(to->stringVal.values.end(),
               from->stringVal.values.begin() + start_idx,
               from->stringVal.values.begin() + start_idx + rows_added);
-          to->stringVal.nulls.insert(to->stringVal.nulls.end(),
-              from->stringVal.nulls.begin() + start_idx,
-              from->stringVal.nulls.begin() + start_idx + rows_added);
           break;
         default:
           DCHECK(false) << "Unsupported type: " << TypeToString(ThriftToType(
@@ -256,12 +234,12 @@ class ImpalaServer::HS2ColumnarResultSet : public ImpalaServer::QueryResultSet {
           break;
       }
     }
-
+    num_rows_ += rows_added;
     return rows_added;
   }
 
   virtual int64_t ByteSize(int start_idx, int num_rows) {
-    const int end = min(num_rows, num_rows - start_idx);
+    const int end = min(start_idx + num_rows, (int)size());
     int64_t bytes = 0L;
     BOOST_FOREACH(const thrift::TColumn& c, result_set_->columns) {
       bytes += TColumnByteSize(c, start_idx, end);
@@ -391,7 +369,7 @@ class ImpalaServer::HS2RowOrientedResultSet : public ImpalaServer::QueryResultSe
     return bytes;
   }
 
-  virtual size_t size() { return 0; }
+  virtual size_t size() { return result_set_->rows.size(); }
 
  private:
   // Metadata of the result set
